# pkg/proto/ruto_v1/app.pb.gw.go
@@ -259,6 +259,41 @@ func local_request_App_GetSwaggerEndpointsDiff_0(ctx context.Context, marshaler 
 	return msg, metadata, err
 }
 
+var filter_App_GetSwaggerUrlByBackendUrl_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+
+func request_App_GetSwaggerUrlByBackendUrl_0(ctx context.Context, marshaler runtime.Marshaler, client AppClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq AppGetSwaggerUrlByBackendUrlReq
+		metadata runtime.ServerMetadata
+	)
+	if req.Body != nil {
+		_, _ = io.Copy(io.Discard, req.Body)
+	}
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_App_GetSwaggerUrlByBackendUrl_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := client.GetSwaggerUrlByBackendUrl(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_App_GetSwaggerUrlByBackendUrl_0(ctx context.Context, marshaler runtime.Marshaler, server AppServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq AppGetSwaggerUrlByBackendUrlReq
+		metadata runtime.ServerMetadata
+	)
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_App_GetSwaggerUrlByBackendUrl_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.GetSwaggerUrlByBackendUrl(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 // RegisterAppHandlerServer registers the http handlers for service App to "mux".
 // UnaryRPC     :call AppServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -384,6 +419,26 @@ func RegisterAppHandlerServer(ctx context.Context, mux *runtime.ServeMux, server
 			return
 		}
 		forward_App_GetSwaggerEndpointsDiff_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodGet, pattern_App_GetSwaggerUrlByBackendUrl_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/ruto_v1.App/GetSwaggerUrlByBackendUrl", runtime.WithHTTPPathPattern("/app/swagger/url/by-backend-url"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_App_GetSwaggerUrlByBackendUrl_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_App_GetSwaggerUrlByBackendUrl_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
 
 	return nil
@@ -527,23 +582,42 @@ func RegisterAppHandlerClient(ctx context.Context, mux *runtime.ServeMux, client
 		}
 		forward_App_GetSwaggerEndpointsDiff_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodGet, pattern_App_GetSwaggerUrlByBackendUrl_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/ruto_v1.App/GetSwaggerUrlByBackendUrl", runtime.WithHTTPPathPattern("/app/swagger/url/by-backend-url"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_App_GetSwaggerUrlByBackendUrl_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_App_GetSwaggerUrlByBackendUrl_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	return nil
 }
 
 var (
-	pattern_App_List_0                    = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"app"}, ""))
-	pattern_App_Get_0                     = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1}, []string{"app", "id"}, ""))
-	pattern_App_Create_0                  = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"app"}, ""))
-	pattern_App_Update_0                  = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1}, []string{"app", "id"}, ""))
-	pattern_App_Delete_0                  = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1}, []string{"app", "id"}, ""))
-	pattern_App_GetSwaggerEndpointsDiff_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1, 2, 2, 2, 3}, []string{"app", "id", "swagger", "endpoints-diff"}, ""))
+	pattern_App_List_0                      = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"app"}, ""))
+	pattern_App_Get_0                       = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1}, []string{"app", "id"}, ""))
+	pattern_App_Create_0                    = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"app"}, ""))
+	pattern_App_Update_0                    = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1}, []string{"app", "id"}, ""))
+	pattern_App_Delete_0                    = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1}, []string{"app", "id"}, ""))
+	pattern_App_GetSwaggerEndpointsDiff_0   = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1, 2, 2, 2, 3}, []string{"app", "id", "swagger", "endpoints-diff"}, ""))
+	pattern_App_GetSwaggerUrlByBackendUrl_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"app", "swagger", "url", "by-backend-url"}, ""))
 )
 
 var (
-	forward_App_List_0                    = runtime.ForwardResponseMessage
-	forward_App_Get_0                     = runtime.ForwardResponseMessage
-	forward_App_Create_0                  = runtime.ForwardResponseMessage
-	forward_App_Update_0                  = runtime.ForwardResponseMessage
-	forward_App_Delete_0                  = runtime.ForwardResponseMessage
-	forward_App_GetSwaggerEndpointsDiff_0 = runtime.ForwardResponseMessage
+	forward_App_List_0                      = runtime.ForwardResponseMessage
+	forward_App_Get_0                       = runtime.ForwardResponseMessage
+	forward_App_Create_0                    = runtime.ForwardResponseMessage
+	forward_App_Update_0                    = runtime.ForwardResponseMessage
+	forward_App_Delete_0                    = runtime.ForwardResponseMessage
+	forward_App_GetSwaggerEndpointsDiff_0   = runtime.ForwardResponseMessage
+	forward_App_GetSwaggerUrlByBackendUrl_0 = runtime.ForwardResponseMessage
 )
